# 3dlab

./: .gitignore  DECISIONS.md  LICENSES.md  NOTICE  QUALITY.md  README.md  SECURITY.md  index.html
.github/workflows/: ci.yml  pages.yml
api/: .env.example  pyproject.toml
api/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.micro.yml  docker-compose.yml
api/sceneforge_api/: __init__.py  db.py  keycli.py  main.py  observability.py  queue.py  reaper.py  scene_views.py  security.py  settings.py  storage.py  webhooks.py
api/sceneforge_worker/: __init__.py  adapters.py  arq_worker.py  hf_space_app.py  jobspec.py  modal_app.py  run_job.py
api/tests/: conftest.py  test_cors.py  test_observability.py  test_reliability.py  test_run_job.py  test_scenes_api.py  test_security.py  test_webhooks_and_worker.py
app/: index.html  vision.html
app/assets/: sf.js
demo/: index.html
designs/phase1-cli/: LLD.md
designs/phase2-api/: LLD.md
designs/phase3-viewer/: LLD.md
docs/: CAPTURE_GUIDE.md  DEPLOY_E2_MICRO.md  LLD.md  OPS.md  QUICKSTART.md  ROADMAP.md  RUNBOOK.md  TECH-RADAR.md
pipeline/: pyproject.toml
pipeline/sceneforge_pipeline/: __init__.py  cli.py  colmap_model.py  config.py  errors.py  pipeline.py  schema.py  splat_export.py  viewer_html.py
pipeline/sceneforge_pipeline/stages/: floorplan.py  geometry.py  ingest.py  lingbot.py  quality.py  scale.py  semantics.py  splat.py
pipeline/tests/: conftest.py  test_colmap_model.py  test_floorplan.py  test_geometry_and_cli.py  test_ingest.py  test_ingest_ffmpeg.py  test_lingbot.py  test_quality.py  test_scale.py  test_schema.py  test_semantics.py  test_splat_export.py
tools/: validate.py
viewer/: README.md  build.mjs  package-lock.json  package.json
viewer/app/assets/: sf.css
viewer/demo/: index.html
viewer/src/: rf-walkthrough.js
viewer/tests/: test_app_e2e.py  test_viewer_e2e.py
viewer/tools/: convert-to-ksplat.mjs  make-sample-scene.py  make-sample-semantics.py
(+2 files in other folders)
